# Basic_Rollup

rollup_client/src/: main.rs  testkey1.json  testkey2.json
rollup_core/: Cargo.toml
rollup_core/src/: frontend.rs  main.rs  rollupdb.rs  sequencer.rs
