[package]
name = "rollup_core"
version = "0.1.0"
edition = "2021"
authors = [ "bergabman bergabman1@gmail.com" ]

[dependencies]
actix-web = "4.9.0"
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
solana-svm = "2.0.7"
solana-program-runtime = "2.0.7"
solana-sdk = "2.0.7"
solana-client = "2.0.7"
solana-compute-budget = "2.0.7"
solana-bpf-loader-program = "2.0.7"
env_logger = "0.11.5"
log = "0.4.22"
anyhow = "1.0.86"
crossbeam = "0.8.4"
async-channel = "2.3.1"
agave-feature-set = "2.2.14"
cbe-program-runtime= "1.15.0"

[patch.crates-io.aes-gcm-siv]
git = "https://github.com/RustCrypto/AEADs"
rev = "6105d7a5591aefa646a95d12b5e8d3f55a9214ef"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/solana-labs/curve25519-dalek.git"
rev = "c14774464c4d38de553c6ef2f48a10982c1b4801"
